--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <link rel="stylesheet" href="./style.css" />
     <link
@@ -18,7 +17,7 @@
   <body>
     <main>
       <div class="card">
-        <div class="row">
+        <div class="row bg-primary">
           <div id="team"></div>
         </div>
 
